# deep-q-learning

./: README.md  pyproject.toml
output/model/22-06-2021_12-35-59/: model
src/: config.py  constants.py  main.py
src/core/action/: selection.py
src/mechanisms/: replay_memory.py
src/models/: dqn.py
src/ops/: plot.py  screen.py
src/processes/: train.py
src/utils/: checkpoints.py  directories.py
